--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,7 @@
 ---
 include:
-#  - board: eyelash_corne_left
-#    shield: nice_view
-#    #snippet: zmk-usb-logging    # Uncomment to log over USB.
+  - board: eyelash_corne_left
+    shield: nice_view
   - board: eyelash_corne_right
     shield: nice_view
     #snippet: zmk-usb-logging
@@ -14,4 +13,3 @@ include:
   - board: eyelash_corne_left
     shield: settings_reset
     #snippet: zmk-usb-logging
- 
